--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -10,16 +10,19 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
+</head>
+
+<body>
+  <form>
+    <button id='jQueryBtn' type="submit" name="withoutjQuery" value="true">Run tests without jQuery</button>
+  </form>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../src/libs/jquery-2.1.0.min.js"></script>
+  <script type="text/javascript" src="withoutjQuery.js"></script>
   <script type="text/javascript" src="../src/arrive.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/arriveSpec.js"></script>
-
-</head>
-
-<body>
 </body>
 </html>
